# odgo-backend

./: README.md  alembic.ini  initialize_dotenv.py  pyproject.toml
odgo-backend-py/: pyproject.toml
odgo-backend-rs/: Cargo.toml
odgo_alembic/: env.py
odgo_alembic/versions/: d718c86d3d34_create_table.py
