[tool.poetry]
name = "odgo-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "odgo_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.20"
python-dotenv = "^1.0.0"
fastapi = {extras = ["all"], version = "^0.103.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
